--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -6,7 +6,8 @@
 
 body {
     background-color: rgba(168, 125, 125, 0.797);
-}
+
+   }
 
 .center {
     display: block;
@@ -16,7 +17,7 @@ body {
 }
 
 .header {
-    padding: 40px;
+    padding: 50px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     background-color: rgb(153, 130, 130);
     color: #ffffff;
@@ -49,6 +50,8 @@ body {
 }
 
 a {
+    font-size: 25px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #ffffff;
     text-decoration: none;
 }
