--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -32,6 +32,8 @@ body {
     color: #d9dcd6;
 }
 
+
+
 .header div {
     padding-top: 15px;
     margin-right: 20px;
@@ -49,6 +51,12 @@ body {
     margin-left: 25px;
 }
 
+h2 {
+    font-size: 30px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
 a {
     font-size: 25px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -57,7 +65,10 @@ a {
 }
 
 p {
-    font-size: 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
+    color: #ffffff;
+    text-decoration: none;
 }
 
 
