added project 1 to portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,13 @@ body {
     width: 40%;
 }
 
+.project1 {
+    height: 300px;
+    width: 400px;
+    max-width: 400px;
+    object-fit: cover;
+}
+
 .me {
     width: 180px;
     height: auto;
